[tool.poetry]
name = "c4"
version = "0.1.0"
description = "'Курсовое' задание блока №4 Skypro"
authors = ["bbt-t <zlukcss@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jobmatchup = "^0.3.2"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
